# lxp32-cpu

./: .gitattributes  .gitignore  LICENSE.md  README.md
doc/src/trm/: .gitignore  frontmatter.tex  lxp32-trm.tex  preamble.tex
misc/highlight/: readme.txt
misc/highlight/akelpad/: asm.coder
misc/highlight/notepad++/: LXP32Assembly.xml
riscv_test/: Makefile  branch.S  csr.S  fence.S  loadsave.S  loadsave.s  loop.S  lxp.ld  mult.S  slt.S  test01.S  test01.lst  test02.S  test03.S  trap01.S
rtl/: bonfire_dm_icache.vhd  csr_def.vhd  lxp32_alu.vhd  lxp32_compl.vhd  lxp32_cpu.vhd  lxp32_dbus.vhd  lxp32_decode.vhd  lxp32_divider.vhd  lxp32_execute.vhd  lxp32_fetch.vhd  lxp32_icache.vhd  lxp32_interrupt_mux.vhd  lxp32_mul16x16.vhd  lxp32_mul_dsp.vhd  lxp32_mul_opt.vhd  lxp32_mul_seq.vhd  lxp32_mulsp6.vhd  lxp32_ram256x32.vhd  lxp32_scratchpad.vhd  lxp32_shifter.vhd  lxp32_smul16x16.vhd  lxp32_ubuf.vhd  lxp32c_top.vhd  lxp32u_top.vhd  riscv_csr_unit.vhd  riscv_decode.vhd  riscv_decodeutil.vhd  riscv_regfile.vhd
tools/src/: CMakeLists.txt
tools/src/lxp32asm/: CMakeLists.txt  assembler.cpp  assembler.h  linkableobject.cpp  linkableobject.h  linker.cpp  linker.h  main.cpp  outputwriter.cpp  outputwriter.h  utils.cpp  utils.h
tools/src/lxp32dump/: CMakeLists.txt  disassembler.cpp  disassembler.h  main.cpp
tools/src/wigen/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  range.cpp  range.h
ut/: tb_mult_dsp.vhd  tb_riscv_decode.vhd  tb_ut_decode_util.vhd  ut_decode_util.vhd
util/: log2.vhd
verify/bonfire/: sim_MainMemory.vhd  sim_bus.vhd  sim_memory_interface.vhd  tb_cpu_core.vhd
verify/common_pkg/: common_pkg.vhd  common_pkg_body.vhd
verify/icache/run/ghdl/: .gitignore  Makefile
verify/icache/run/vsim/: .gitignore  Makefile
verify/icache/run/xsim/: .gitignore  (+1 more)
(+47 files in other folders)
